# Patcher

./: .dockerignore  .editorconfig  .gitguardian.yaml  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CNAME  Dockerfile  LICENSE  Makefile  README.md  config.ini  dev-requirements.txt  docker-compose.yml  entitlements.plist  installer.sh  patcher.py  pyproject.toml  pytest.ini  readthedocs.yaml  requirements.txt  ui-config.py  ui_config.py
.cursor/rules/: autopkg.mdc  homebrew.mdc  installomator.mdc  jamf-app-installers.mdc  jamf-pro-api.mdc  python-general-best-practices.mdc  sphinx-style-docstrings.mdc
.github/: CODEOWNERS  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.md  feature_request.yml  feedback.md  feedback.yml  issue.md
.github/scripts/: probe.sh  resolveLabel.sh
.github/workflows/: build-release-publish.yml  build-release.yml  build.sh  deploy-api.yml  issues-notion-sync.yml  publish-docs.yml  publish-test-pypi.yml  publish.yml  pytest.yml  refresh-catalog.yml  release.yaml  release.yml  resolve-labels.yml  test.yaml  uptime.yml
api/: alembic.ini  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 0001_baseline.py  0002_apps_expected_team_id.py  0003_drop_mas.py  0004_drop_latest_release_date.py  0005_drop_orphaned_cves.py  0006_drop_orphaned_deploy_tokens.py
api/deploy/: README.md  deploy.sh  patcher-catalog-refresh.service  patcher-catalog-refresh.timer  patcher-catalog-swap.path  patcher-catalog-swap.service  patcher-deploy.path  patcher-deploy.service  patcher-schema-audit.service  patcher-schema-audit.timer  swap-patcher-catalog.sh
api/patcher_api/: __init__.py  auth.py  catalog.py  config.py  data.py  db.py  drift.py  installomator_resolver.py  labels.py  main.py  queries.py  seed.py  services.py  stitch.py
api/patcher_api/ingest/: __init__.py  _label_parser.py  autopkg.py  homebrew.py  installomator.py  jamf.py  jamf_app_installers.py  mas.py
api/patcher_api/installomator/: __init__.py  _filters.py  ingest.py  parser.py  resolver.py
api/patcher_api/mcp/: __init__.py  _queries.py  middleware.py  prompts.py  resources.py  server.py  tools.py
api/patcher_api/models/: __init__.py  app.py  autopkg.py  deploy_token.py  homebrew.py  installomator.py  jamf.py  jamf_app_installers.py  mas.py  token.py
api/patcher_api/routes/: __init__.py  admin.py  apps.py  stats.py
api/patcher_api/schemas/: __init__.py  app.py  autopkg.py  base.py  drift.py  homebrew.py  jamf.py  jamf_app_installers.py  labels.py  mas.py  sources.py  stats.py
api/patcher_api/static/: index.html
api/scripts/: audit_schema.py  generate_openapi.py  grant_deploy_token.py  grant_token.py  ingest.py  ingest_autopkg.py  ingest_homebrew.py  ingest_installomator.py  ingest_jamf_app_installers.py  ingest_mas.py  stitch_catalog.py
api/tests/: conftest.py  test_admin.py  test_apps.py  test_audit_schema.py  test_auth.py  test_drift.py  test_health.py  test_ingest_autopkg.py  test_ingest_homebrew.py  test_ingest_installomator.py  test_ingest_jamf_app_installers.py  test_ingest_mas.py  test_installomator_resolver.py  test_jai_title_schema.py  test_jai_titles_fetch.py  test_jamf_titles.py  test_labels.py  test_mcp.py  test_mcp_origin.py  test_migrations.py  test_routes_drift.py  test_stats.py  test_stitch.py
api/tests/fixtures/: available_titles.json  available_titles.xml
docs/: 404.md  conf.py  generate_switcher.py  index.md  index.rst
docs/_generated/: openapi.json
docs/_static/: switcher.json
docs/_templates/: custom-template.html
docs/api/: endpoints.md  examples.md
docs/concepts/: data-storage.md
docs/contributing/: architecture.md  code_of_conduct.rst  environment_setup.rst  index.md  index.rst  roadmap.md
docs/ext/: cli_lexer.py  ghwiki.py  highlights.py  prompt.py  steps.py  styled_params.py
docs/getting-started/: claude-code.md  customization.md  install.md  jamf-api.md  mcp.md  setup.md
docs/getting_started/: index.rst  introduction.rst  setup.rst
docs/guides/: agents.md  analyze.md  automation.md  diff.md  drift.md  export.md  installomator.md  mcp-recipes.md  recipes.md  reset.md
docs/integrations/: autopkg.md  homebrew-cask.md  installomator.md  jamf-app-installers.md
docs/macadmins/: index.md
docs/project/: architecture.md  contributing.md  data-storage.md  roadmap.md  self-hosting.md  sources.md  troubleshooting.md
docs/reference/: analyze.md  analyze.rst  animation.md  animation.rst  api_client.rst  base_api_client.rst  cli.md  cli.rst  config_manager.md  config_manager.rst  data_manager.md  data_manager.rst  decorators.rst  excel_report.rst  exceptions.md  exceptions.rst  fonts.rst  fragment.md  fragment.rst  http_client.md  http_client.rst  index.md  index.rst  installomator.rst  jamf.rst  jamf_client.md  jamf_client.rst  jamf_models.md  label.md  label.rst  logger.md  logger.rst  modules.rst  patch.md  patch.rst  patcher.client.rst  patcher.models.reports.rst  patcher.models.rst  patcher.rst  patcher.utils.rst  (+21 more)
docs/support/: data-storage.md  faq.md  troubleshooting.md
docs/usage/: analyze.md  automation.md  export.md  installomator.md  library.md  reset.md
docs/user/: analyze.rst  ci_cd.md  customization.rst  customize_reports.rst  export.rst  faq.md  (+14 more)
src/: __about__.py  cli.py  exceptions.py  globals.py  logger.py  ui_config.py  utils.py
tests/: conftest.py  test_analyzer.py  test_api_fetching.py  test_base_api.py  test_cli.py  test_cli_helpers.py  test_cli_rich.py  test_config_manager.py  test_console.py  test_data_manager.py  test_environment.py  test_excel_report.py  test_exporter.py  test_fonts.py  test_helpers.py  test_installomator.py  test_ios.py  test_logging.py  test_matching.py  test_patcher.py  test_patcher_api_client.py  test_patcher_client.py  test_pdf.py  test_platform_keyring.py  test_plist_manager.py  test_public_surface.py  test_report.py  test_serialization.py  test_settings.py  test_setup.py  test_token_manager.py  test_token_validity.py  test_ui.py  test_utils.py
tools/: installer.sh  uninstall.sh
(+209 files in other folders)
