[project]
name = "patcherctl"
dynamic = ["version"]
readme = "README.md"
description = "Fetch patch management data from Jamf Pro to generate comprehensive reports in both Excel and PDF formats"
keywords = ["jamf", "pro", "jss", "patch", "macOS"]
license = { file = "LICENSE" }
authors = [
  { name = "Andrew Lerman" },
  { name = "Chris Ball" },
  { email = "info@liquidzoo.io" },
]
maintainers = [
  { name = "Andrew Lerman" },
  { name = "Chris Ball" },
]
requires-python = ">=3.11"
dependencies = [
  "anyio>=4.11.0",
  "asyncclick>=8.2.2",
  "fpdf2>=2.7.8",
  "httpx>=0.28.1",
  "keyring>=24.3.1",
  "openpyxl>=3.1.2",
  "pandas>=2.2.0",
  "pyarrow>=15.0.0",
  "pydantic>=2.7.4",
  "rapidfuzz>=3.12.1",
  "rich>=13.7.0",
  "truststore>=0.10",
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Intended Audience :: System Administrators",
  "Intended Audience :: Information Technology",
  "Intended Audience :: Developers",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Documentation",
  "License :: OSI Approved :: Apache Software License"
]


[project.urls]
Homepage = "https://docs.patcherctl.dev"
Documentation = "https://docs.patcherctl.dev"
Repository = "https://github.com/liquidz00/Patcher"
Issues = "https://github.com/liquidz00/Patcher/issues/new?template=bug_report.yml"

[project.scripts]
patcherctl = "patcher.cli:cli"

[project.optional-dependencies]
dev = [
  "patcherctl[docs]",
  "build",
  "pre-commit>=4.3.0",
  "pytest>=8.2.2",
  "pytest-asyncio>=0.23.5",
  "pytest-cov>=4.0.0",
  "pytest-mock>=3.14.0",
  "ruff>=0.5.1",
]
docs = [
  "autodoc-pydantic",
  "myst-parser",
  "shibuya>=2026.1.9",
  "sphinx>=7.3.7",
  "sphinx-copybutton",
  "sphinx-design",
  "sphinx-iconify>=0.3.0",
  "sphinx-sitemap>=2.6.0",
  "sphinxcontrib-mermaid>=1.0.0",
  "sphinxcontrib-openapi>=0.8.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Hatchling reads __version__ from this file at build time (same pattern httpx
# and most modern hatchling projects use — manual bump in the file, no VCS).
[tool.hatch.version]
path = "src/patcher/__about__.py"

# Map src/patcher/ -> the `patcher` package in the wheel. Hatchling packages
# every file under the package by default, so templates/*.html and py.typed
# come along without needing explicit include rules (setuptools required them).
[tool.hatch.build.targets.wheel]
packages = ["src/patcher"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]
exclude = ["docs", "api/alembic"]
force-exclude = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"

[tool.ruff.lint]
select = [
  "E101",
  "F401",
  "F403",
  "I001",
  "N801",
  "N802",
  "N806"
]
ignore = ["E722"]

[tool.ruff.lint.per-file-ignores]
"utils/animation.py" = ["F403"]
# Test code commonly assigns mocks to PascalCase names that stand in for the
# class being patched (e.g. MockTokenManager = MagicMock()). N806 (non-lowercase
# variable in function) is the wrong lint to enforce in that context.
"tests/**/*.py" = ["N806"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
minversion = "6.0"
# Project root on the path so tests can `from src.patcher.X import Y`.
# Required after pytest 9 tightened implicit sys.path manipulation.
pythonpath = ["."]
addopts = [
  "--durations=5",
  "--color=yes",
  "--cov=src",
  "--cov-report=html:coverage/htmlcov",
  "--cov-report=term-missing",
  # Integration tests hit the live network; opt in with `-m integration` (see `make test-integration`).
  "-m",
  "not integration",
]
testpaths = ["./tests"]
# Any warning fails the suite, so a new one can't slip in silently. Expected
# warnings are asserted per-test with pytest.warns / scoped filterwarnings marks.
filterwarnings = ["error"]
markers = [
  "unit: Fast unit tests that test individual components in isolation",
  "integration: Tests that involve multiple components or external dependencies",
  "slow: Tests that take longer than 1 second to run",
  "asyncio: Tests that use async/await functionality",
]

[tool.coverage.run]
omit = ["tests/*"]

[tool.uv.workspace]
members = ["api"]
